--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,64 @@
     color: #666;
   }
   
+  /*disclaimer website*/
+  #disclaimer {
+    background-color: #f7f7f7;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+  
+  #disclaimer p {
+    font-size: 14px;
+    color: #666;
+    margin: 0;
+  }
+
+ /* Apparel Gallery */
+.gallery {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-item {
+  flex: 0 0 calc(33.33% - 20px);
+  margin: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.2s ease-in-out;
+}
+
+.item-details {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+  text-align: center;
+}
+
+.item-name {
+  font-weight: bold;
+  font-size: 1px;
+  margin-bottom: 0px;
+}
+
+.item-price {
+  font-weight: normal;
+  font-size: 10px;
+  color: #333;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.3);
+}
